objects/ASI_CRM_Dynamic_Approval_Route__c.object
<CustomObject>
    <description>For CN CRM Use</description>
    <fields>
        <fullName>ASI_CRM_Approval_Limit__c</fullName>
        <label>Approval Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_of_Dynamic_Route__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End of Dynamic Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Manager_ID__c</fullName>
        <formula>ASI_CRM_User__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>IOM</fullName>
                </value>
                <value>
                    <fullName>WS T1</fullName>
                </value>
                <value>
                    <fullName>WS T2</fullName>
                </value>
                <value>
                    <fullName>Channel Strategy</fullName>
                </value>
                <value>
                    <fullName>WS Evaluation</fullName>
                </value>
                <value>
                    <fullName>Last Payment</fullName>
                </value>
                <value>
                    <fullName>PR Direct</fullName>
                </value>
                <value>
                    <fullName>AB General</fullName>
                </value>
                <value>
                    <fullName>Sales Order - IHBR</fullName>
                </value>
                <value>
                    <fullName>Sales Order - HQ</fullName>
                </value>
                <value>
                    <fullName>Price - Customer Price (IHBR)</fullName>
                </value>
                <value>
                    <fullName>Cancel WS T1</fullName>
                </value>
                <value>
                    <fullName>Cancel WS T2</fullName>
                </value>
                <value>
                    <fullName>Free Goods Request</fullName>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Dynamic_Approval_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI CRM Dynamic Approval Route</label>
    <listViews>
        <fullName>ASI_CRM_CN_CRM_Dynamic_Approval_Routes_P</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>CN CRM Dynamic Approval Routes PO</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_AB_policy</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>AB General</value>
        </filters>
        <label>CN CRM Dynamic - AB policy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Approval_Routes_Payment1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Payment,Last Payment</value>
        </filters>
        <label>CN CRM Dynamic Approval Routes Payment</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Approval_Routes_T2</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>WS T2</value>
        </filters>
        <label>CN CRM Dynamic Approval Routes_T2</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_Free_Goods</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Free Goods Request</value>
        </filters>
        <label>CN CRM Dynamic - Free Goods</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_CRM_Dynamic_POSM</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Approval_Limit__c</columns>
        <columns>ASI_CRM_End_of_Dynamic_Route__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Dynamic_Approval_Route__c.ASI_CRM_CN_Dynamic_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_Type__c</field>
            <operation>equals</operation>
            <value>POSM</value>
        </filters>
        <label>CN CRM Dynamic - POSM</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DAR{000000}</displayFormat>
        <label>ASI CRM Dynamic Approval Route Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI CRM Dynamic Approval Routes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Dynamic_Approval_Route</fullName>
        <active>true</active>
        <label>CN Dynamic Approval Route</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>